--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -2,12 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.dewald.goodBowler" 
 	  android:installLocation="auto"
-      android:versionCode="17"
-      android:versionName="2.0">
+      android:versionCode="18"
+      android:versionName="2.0.1">
     <uses-sdk android:minSdkVersion="4" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+    <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".Main"
                   android:label="@string/app_name">
             <intent-filter>
