--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,7 @@
       android:versionName="2.0.1">
     <uses-sdk android:minSdkVersion="4" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".Main"
@@ -31,5 +32,7 @@
 		<activity android:label="Bowling Ball List" android:name=".ListBalls"/>
 		<activity android:label="Bowling Ball Stats" android:name=".BallStats"/>
 		<activity android:name="org.achartengine.GraphicalActivity" />
+		<meta-data android:value="@string/app_id" android:name="com.facebook.sdk.ApplicationId"/>
+		<activity android:name="com.facebook.LoginActivity"></activity>
     </application>
 </manifest>
