--- a/project.properties
+++ b/project.properties
@@ -9,3 +9,4 @@
 
 # Project target.
 target=android-8
+android.library.reference.1=../../Downloads/facebook-android-sdk-3.0.1/facebook-android-sdk-3.0.1/facebook
