--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,10 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.dewald.goodBowler" 
 	  android:installLocation="auto"
-      android:versionCode="18"
-      android:versionName="2.0.1">
+      android:versionCode="19"
+      android:versionName="2.0.2">
     <uses-sdk android:minSdkVersion="4" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".Main"
@@ -31,5 +32,7 @@
 		<activity android:label="Bowling Ball List" android:name=".ListBalls"/>
 		<activity android:label="Bowling Ball Stats" android:name=".BallStats"/>
 		<activity android:name="org.achartengine.GraphicalActivity" />
+		<meta-data android:value="@string/app_id" android:name="com.facebook.sdk.ApplicationId"/>
+		<activity android:name="com.facebook.LoginActivity"></activity>
     </application>
 </manifest>
