--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -4,34 +4,40 @@
 	  android:installLocation="auto"
       android:versionCode="23"
       android:versionName="2.0.6">
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="11"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" >
         <activity android:name=".Main"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:theme="@style/Theme.Customactionbartheme"
+                  android:uiOptions="splitActionBarWhenNarrow">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-		<activity android:label="Bowler List" android:name=".ListBowlers" />
+		<activity android:label="Bowler List" android:name=".ListBowlers" android:theme="@style/Theme.Customactionbartheme"/>
 		<activity android:label="Create New Bowler" android:name=".NewBowler" android:windowSoftInputMode="stateAlwaysVisible"/>
-		<activity android:label="Enter Score Details" android:name=".ScoreCardActivity" />
+		<activity android:label="Enter Score Details" android:name=".ScoreCardActivity" 
+		    	  android:theme="@style/Theme.Customactionbartheme"
+                  android:uiOptions="splitActionBarWhenNarrow"/>
 		<activity android:label="Create New League" android:name=".NewLeague" android:windowSoftInputMode="stateAlwaysVisible"/>
-		<activity android:label="League List" android:name=".ListLeagues" />
-		<activity android:label="League Night Scores" android:name=".LeagueNightActivity"/>
-		<activity android:label="League Scores List" android:name=".ListLeagueNight"/>
-		<activity android:label="Bowler Stat Functions" android:name=".StatFunctionsActivity"/>
+		<activity android:label="League List" android:name=".ListLeagues" android:theme="@style/Theme.Customactionbartheme"/>
+		<activity android:label="League Night Scores" android:name=".LeagueNightActivity"
+		    	  android:theme="@style/Theme.Customactionbartheme"
+                  android:uiOptions="splitActionBarWhenNarrow"/>
+		<activity android:label="League Scores List" android:name=".ListLeagueNight" android:theme="@style/Theme.Customactionbartheme"/>
+		<activity android:label="Bowler Stat Functions" android:name=".StatFunctionsActivity" android:theme="@style/Theme.Customactionbartheme"/>
 		<activity android:label="About Page" android:name=".About"/>
-		<activity android:label="Select Details of Stats to View" android:name=".StatSelect"/>
-		<activity android:label="Bowler Stats" android:name=".Stats"/>
-		<activity android:label="Good Bowler Stats Help" android:name=".HelpPage"/>
-		<activity android:label="Bowling Ball Manager" android:name=".BallManager" android:windowSoftInputMode="stateAlwaysVisible"/>
-		<activity android:label="Bowling Ball List" android:name=".ListBalls"/>
-		<activity android:label="Bowling Ball Stats" android:name=".BallStats"/>
-		<activity android:name="org.achartengine.GraphicalActivity" />
+		<activity android:label="Select Details of Stats to View" android:name=".StatSelect" android:theme="@style/Theme.Customactionbartheme"/>
+		<activity android:label="Bowler Stats" android:name=".Stats" android:theme="@style/Theme.Customactionbartheme"/>
+		<activity android:label="Good Bowler Stats Help" android:name=".HelpPage" android:theme="@style/Theme.Customactionbartheme"/>
+		<activity android:label="Bowling Ball Manager" android:name=".BallManager" android:windowSoftInputMode="stateAlwaysVisible" android:theme="@style/Theme.Customactionbartheme"/>
+		<activity android:label="Bowling Ball List" android:name=".ListBalls" android:theme="@style/Theme.Customactionbartheme"/>
+		<activity android:label="Bowling Ball Stats" android:name=".BallStats" android:theme="@style/Theme.Customactionbartheme"/>
+		<activity android:name="org.achartengine.GraphicalActivity" android:theme="@style/Theme.Customactionbartheme"/>
 		<meta-data android:value="@string/app_id" android:name="com.facebook.sdk.ApplicationId"/>
 		<activity android:name="com.facebook.LoginActivity"></activity>
     </application>
