--- a/project.properties
+++ b/project.properties
@@ -8,5 +8,5 @@
 # project structure.
 
 # Project target.
-target=android-8
-android.library.reference.1=../../Downloads/facebook-android-sdk-3.0.1/facebook-android-sdk-3.0.1/facebook
+target=Google Inc.:Google APIs:19
+android.library.reference.1=..\\..\\workspace\\android-support-v7-appcompat
